Liberando CORS para PUT e DELETE